<resources>
    <string name="app_name">Tabler :P</string>
    <string name="table_no">Table %1$d</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="next_fragment">Next Fragment</string>
    <string name="customer_name">Customer Name</string>
    <string name="add_customer">Add Customer</string>
    <string name="customer_list">Customer List</string>
    <string name="table_btn_text">Table %1$d \n(%2$d Customer\s)</string>
    <string name="table_1">Table 1 \n(4 Customer\s)</string>
    <string name="table_2">Table 2 \n(3 Customer\s)</string>
    <string name="table_3">Table 3 \n(1 Customer\s)</string>
    <string name="table_4">Table 4 \n(5 Customer\s)</string>
    <string name="clear_tables">Clear All Tables</string>
    <string name="clear_customers">Clear Customers</string>
</resources>